[package]
name = "rust2srs"
version = "0.1.0"
edition = "2021"
authors = ["Bas van der Hoek <bas@hoek.com>"]
description = "A tool to create Anki cards from videos with subtitles"

[dependencies]
clap = "4.4.2"
pest = "2.7.3"
pest_derive = "2.7.3"
ffmpeg-next = "6.0.0"
jpeg-encoder = "0.5.1"
rmp3 = "0.3.1"

[dev-dependencies]
assert_matches = "1.5.0"
