[package]
name = "rust2srs"
version = "0.1.0"
edition = "2021"
authors = ["Bas van der Hoek <bas@hoek.com>"]
description = "A tool to create Anki cards from videos with subtitles"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
pest = "2.7.3"
pest_derive = "2.7.10"
ffmpeg-next = "7.0.2"
jpeg-encoder = "0.5.1"
rmp3 = "0.3.1"
env_logger = "0.11.3"
log = "0.4.21"

[dev-dependencies]
assert_matches = "1.5.0"
